<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UnisoundFramework</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tts_recognize">Play tts start recognize</string>
    <string name="tts_wakeup">Play tts start wakeup</string>
    <string name="set_wakeupword">Set Command wakeup word</string>
    <string name="set_normal_wakeup">Set normal wakeup</string>
    <string name="set_oneshot_wakeup">Set oneshot wakeup</string>
    <string name="start_compile_manual">Start compile manual</string>
    <string name="cancel_speech">Cancel speech</string>
    <string name="set_current_city">set current city -> BeiJing</string>

</resources>